tests/neg-macros/i19941.check
-- Error: tests/neg-macros/i19941.scala:7:14 ---------------------------------------------------------------------------
7 |    case '{ ${hd *: tl} : *:[Int, EmptyTuple] } => '{ ??? } // error
  |              ^^^^^^^^
  |              Spice pattern must match an Expr[...]
